--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "homework1-task1": "nodemon --exec babel-node Homework-1-FUNDAMENTAL_THEORY/task1/task1-reverse-input-value.js",
     "homework1-task2": "nodemon --exec babel-node Homework-1-FUNDAMENTAL_THEORY/task2/task2-csv-to-txt.js",
     "homework2": "ts-node-dev --respawn --transpileOnly ./Homework-2-SERVICE_WITH_VALIDATION/server.ts",
+    "homework3": "ts-node-dev --respawn --transpileOnly ./Homework-3-DB_AND_LAYERED_ARCH/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,6 +26,7 @@
     "csvtojson": "2.0.10",
     "express": "4.17.1",
     "express-joi-validation": "4.0.3",
+    "pg": "7.17.1",
     "typescript": "3.7.2"
   },
   "devDependencies": {
