--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "homework1-task2": "nodemon --exec babel-node Homework-1-FUNDAMENTAL_THEORY/task2/task2-csv-to-txt.js",
     "homework2": "ts-node-dev --respawn --transpileOnly ./Homework-2-SERVICE_WITH_VALIDATION/server.ts",
     "homework3": "ts-node-dev --respawn --transpileOnly ./Homework-3-DB_AND_LAYERED_ARCH/server.ts",
+    "homework4": "ts-node-dev --respawn --transpileOnly ./Homework-4-many-to-many-relationsip/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
