--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "csvtojson": "2.0.10",
     "express": "4.17.1",
     "express-joi-validation": "4.0.3",
+    "express-winston": "4.0.3",
     "pg": "7.17.1",
-    "typescript": "3.7.2"
+    "typescript": "3.7.2",
+    "winston": "3.2.1"
   },
   "devDependencies": {
     "@babel/cli": "7.7.4",
