Init files for homework 6

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "homework3": "ts-node-dev --respawn --transpileOnly ./Homework-3-DB_AND_LAYERED_ARCH/server.ts",
     "homework4": "ts-node-dev --respawn --transpileOnly ./Homework-4-many-to-many-relationsip/server.ts",
     "homework5": "ts-node-dev --respawn --transpileOnly ./Homework-5-logging-and-error-handling/server.ts",
+    "homework6": "ts-node-dev --respawn --transpileOnly ./Homework-6-jwt-authorization-and-cors/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
