--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "homework4": "ts-node-dev --respawn --transpileOnly ./Homework-4-many-to-many-relationsip/server.ts",
     "homework5": "ts-node-dev --respawn --transpileOnly ./Homework-5-logging-and-error-handling/server.ts",
     "homework6": "ts-node-dev --respawn --transpileOnly ./Homework-6-jwt-authorization-and-cors/server.ts",
+    "homework7": "ts-node-dev --respawn --transpileOnly ./Homework-7-unit-tests-and-config/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
