--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/node": "12.12.11",
     "cors": "2.8.5",
     "csvtojson": "2.0.10",
+    "dotenv": "8.2.0",
     "express": "4.17.1",
     "express-joi-validation": "4.0.3",
     "express-winston": "4.0.3",
